<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/finalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/question1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:background="@android:color/background_dark"
            android:src="@drawable/thelordoftherings" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:text="@string/main_question"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:hint="@string/hint"
            android:id="@+id/textAnswer"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question1"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/checkboxLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question1"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="20dp"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9_option1" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9_option2" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9_option3" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/question1"
            android:checkedButton="1">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:onClick="controller"
                android:text="@string/first_question" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:onClick="controller"
                android:text="@string/second_question" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:onClick="controller"
                android:text="@string/third_question" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonOne"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:onClick="TrueFalse"
            android:text="@string/button" />
    </RelativeLayout>


</LinearLayout>
